Monitoring/prometheus/old old/Service-monitoring-prometheus-pushgateway.yml
---
# Source: prometheus/charts/prometheus-pushgateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway
  labels:
    helm.sh/chart: prometheus-pushgateway-2.7.1
    app.kubernetes.io/name: prometheus-pushgateway
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "v1.7.0"
    app.kubernetes.io/managed-by: Helm
  name: monitoring-prometheus-pushgateway
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: prometheus-pushgateway
    app.kubernetes.io/instance: monitoring
