Monitoring/prometheus/old old/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prom.server.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-prometheus-server
            port:
              number: 9090
